write text that explains website

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>TFL with Jade</title>
 </head>
 <body>
-    <ul class="allLines">
-        <li>here are the lines</li>
-    </ul>
+    <h1> TFL Tube Lines' Status</h1>
+    <h5>Here you check the performance of London's tube lines, so you can plan a more efficient and surprise-free journey.</h5>
+    <h3 class="allLines">
+        <button>Check lines</button>
+    </h3>
     <script src="main.js"></script>
 </body>
 </html>
