attempt to make data show once page is loaded

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
 <body>
     <h1> TFL Tube Lines' Status</h1>
-    <h5>Here you check the performance of London's tube lines, so you can plan a more efficient and surprise-free journey.</h5>
-    <h3 class="allLines">
-        <button>Check lines</button>
-    </h3>
+    <h5>Here you check the performance of London's tube lines, in order to plan a more efficient and surprise-free journey.</h5>
+    <h3 class="allLines"></h3>
+    <button class="button">Check lines</button>
     <script src="main.js"></script>
 </body>
 </html>
