style lines as cards

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
 </head>
 <body>
+    <div class="intro">
     <h1> TFL Tube Lines' Status</h1>
+    </div>
     <h5>Here you check the performance of London's tube lines, in order to plan a more efficient and surprise-free journey.</h5>
     <h3 class="allLines"></h3>
     
